
    - divisor_sum(0) returns 0.  divisors(0) returns an empty list.

    - divisors takes an optional second argument to prune the returned list.

    - consecutive_integer_lcm(0) was returning 0.  Now returns 1, matching
      the original GMP API as well as the OEIS series.

    - some error messages with invalid arguments have changed.

    [ADDED]

    - powersum(n,k)                   sum of k-th powers of positive ints <= n
    - sumpowerful(n[,k])              sum of k-powerful numbers <= n
    - sumliouville(n)                 L(n), sum of liouville(1..n)
    - sumtotient(n)                   sum of euler_phi(1..n)
    - prime_bigomega(n)               # of factors (with multiplicity)
    - prime_omega(n)                  # of factors (distinct)
    - powint(a, b)                    signed integer a^b
    - mulint(a, b)                    signed integer a*b
    - addint(a, b)                    signed integer a+b
    - subint(a, b)                    signed integer a-b
    - add1int(n)                      signed integer n+1
    - sub1int(n)                      signed integer n-1
    - divint(a, b)                    signed integer a/b (floor)
    - modint(a, b)                    signed integer a%b (floor)
    - cdivint(a, b)                   signed integer a/b (ceiling)
    - divrem(a, b)                    Euclidean quotient and remainder
    - fdivrem(a, b)                   Floored quotient and remainder
    - cdivrem(a, b)                   Ceiling quotient and remainder
    - tdivrem(a, b)                   Truncated quotient and remainder
    - lshiftint(n, k)                 left shift n by k bits
    - rshiftint(n, k)                 right shift n by k bits (truncating)
    - rashiftint(n, k)                right shift n by k bits (flooring)
    - absint(n)                       integer absolute value
    - negint(n)                       integer negation
    - cmpint(a, b)                    integer comparison (like <=>)